# pypilot

./: .gitignore  .project  README  README.md  dependencies.py  pypilot.build  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml
arduino/: README
arduino/bmp280/: bmp280.ino
arduino/daviswindsensor/: daviswindsensor.ino
arduino/hat/: Makefile  Makefile-old  RCSwitch.cpp  hat.ino  (+1 more)
docs/: refactor-design.md
hat/: Makefile  README  arduino.py  babel.cfg  boot.py  buzzer.py  config.py  config_esp32.py  crc.py  font.py  gettext_esp32.py  glut.py  gpio.py  gpio_esp32.py  hat.py  lcd.py  lcd_esp32.py  lirc.py  lircd.py  menu.py  messages.pot  page.py  pypilot_hat_web.pot  test.py  testlirc.py  testmem.py  testrf.py  tftscreen.py  translate-web.sh  upy_client.py  web.py  wifi_esp32.py
intellect/: intellect.py
lcd/: .gitignore  PCD8544.py  README  client.py  font.py  glut.py  lcd.py  nokia5110lcd.py  test.py  testlirc.py
locale/: trans-po.py  translate.sh
pypilot/: .gitignore  autogain.py  autopilot.py  basic_autopilot.py  boatimu.py  boatplot.py  bufferedsocket.py  calibration_fit.py  client.py  crc.py  failedimports.py  gettext_loader.py  gps_filter.py  gpsd.py  gpsdpoller.py  gpspoller.py  nmea.py  nmea_bridge.py  nonblockingpipe.py  pgm.py  pipeserver.py  pyjson.py  quaternion.py  resolv.py  rudder.py  sensors.py  serialprobe.py  server.py  servo.py  servo_calibration.py  signalk.py  simple_autopilot.py  tacking.py  values.py  vector.py  version.py  wind.py  zeroconf_service.py
pypilot_lcd/: client.py  font.py  glut.py  test.py
pypilot_ui/: autopilot_calibration.py  autopilot_control.fbp  autopilot_control.py  autopilot_control_ui.py  boatplot.py  compass_calibration_plot.py  lcdclient.py
pypilot_webapp/: pypilot_webapp.py
rf/: rf.py  testlatency.py
scripts/: get_dependencies.sh  gpsdate  gpsdate.py  gpsprobe.py  install_data.sh  install_rtimulib.sh  update_systemd_openplotter.sh
signalk/: bufferedsocket.py  client.py  client_wx.py  kjson.py  pipeserver.py  scope.py  scope_ui.fbp  scope_ui.py  scope_wx.py  server.py  values.py
tests/: conftest.py  test_nmea_parsers.py  test_signalk.py  test_values.py
ui/: .gitignore  autopilot_calibration.py  autopilot_control.fbp  autopilot_control.py  autopilot_control_ui.py  boatplot.py  calibration_plot.py  client_wx.py  compass_calibration_plot.py  scope.py  scope_ui.fbp  scope_ui.py  scope_wx.py  shape.py
web/: README  babel.cfg  gettext_helper.py  networking.py  pypilot_web.pot  pypilot_web.wsgi  tinypilot.py  translate.sh  web.py
webapp/: README  pypilot_webapp.py  pypilot_webapp.wsgi  webapp.py
(+245 files in other folders)
